--- a/templates/gerants/index.html
+++ b/templates/gerants/index.html
@@ -20,7 +20,7 @@
                 <div class="btn-group me-2">
                     {% if lst_gerant %}
                     <a href="{% url 'export_pdf_gerant' %}" class="btn btn-sm btn-outline-danger">PDF</a>
-                    <a href="{% url 'export_xls_gerant' %}" class="btn btn-sm btn-outline-success">XLS</a>
+<!--                    <a href="{% url 'export_xls_gerant' %}" class="btn btn-sm btn-outline-success">XLS</a>-->
                     {% endif %}
                 </div>
               </div>
@@ -129,7 +129,7 @@
                                     {% endfor %}
                                 </div>
                                 <div class="col-md-12 text-center">
-                                    <button type="submit" class="w-100">Ajouter le gérant</button>
+                                    <button type="submit" class="w-100">Ajouter le vendeur</button>
                                 </div>
                             </div>
                         </form>
