--- a/templates/services/index.html
+++ b/templates/services/index.html
@@ -20,7 +20,7 @@
                 <div class="btn-group me-2">
                     {% if lst_serv %}
                     <a href="{% url 'export_pdf_service' %}" class="btn btn-sm btn-outline-danger">PDF</a>
-                    <a href="{% url 'export_xls_service' %}" class="btn btn-sm btn-outline-success">XLS</a>
+                    <!--<a href="{% url 'export_xls_service' %}" class="btn btn-sm btn-outline-success">XLS</a>-->
                     {% endif %}
                 </div>
               </div>
