--- a/templates/services/pdf-output.html
+++ b/templates/services/pdf-output.html
@@ -6,11 +6,11 @@
 {% block body %}
 <div class="header">
     <p class="nom-org">{{org.nom}}<p>
-    <p class="mail-org">E-mail: {{org.mail}}</p>
+    <p class="mail-org"><span style="font-weight: lighter !important; color: #333; font-size: 12px;!important;">E-mail:</span> {{org.mail}}</p>
     {% if org.telephone_s %}
-        <p class="tel-org">Tel: {{org.telephone_p}} / {{org.telephone_s}}</p>
+        <p class="tel-org"><span style="font-weight: lighter !important; color: #333; font-size: 12px;!important;">Tél:</span> {{org.telephone_p}} / {{org.telephone_s}}</p>
     {% else %}
-        <p class="tel-org">Tel: {{org.telephone_p}}</p>
+        <p class="tel-org"><span style="font-weight: lighter !important; color: #333; font-size: 12px;!important;">Tél:</span> {{org.telephone_p}}</p>
     {% endif %}
     <hr>
 </div>
@@ -21,16 +21,16 @@
             <thead>
                 <tr>
                     <th scope="col" class="num">#</th>
-                    <th scope="col">Nom du service</th>
-                    <th scope="col">Catégorie du service</th>
+                    <th scope="col" align="left">Nom du service</th>
+                    <th scope="col" align="left">Catégorie du service</th>
                 </tr>
             </thead>
             <tbody>
                 {% for serv in lst_serv %}
                 <tr>
                     <td scope="row">{{forloop.counter}}</td>
-                    <td>{{serv.nom}}</td>
-                    <td>{{serv.categorie}}</td>
+                    <td align="left">{{serv.nom}}</td>
+                    <td align="left">{{serv.categorie}}</td>
                 </tr>
                 {% endfor %}
             </tbody>
