Fix vendeur again

--- a/templates/gerants/pdf-output.html
+++ b/templates/gerants/pdf-output.html
@@ -17,7 +17,7 @@
 <div class="page">
     <div class="container" align="center">
         <table>
-            <h3 class="title">Liste des gérants</h3>
+            <h3 class="title">Liste des vendeurs</h3>
             <thead>
                 <tr>
                     <th scope="col" class="num">#</th>
