--- a/templates/point_affaires/index.html
+++ b/templates/point_affaires/index.html
@@ -108,47 +108,59 @@
                                     <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
                                   {% endfor %}
                                 </div>
+                                <div class="col-md-6">
+                                    <label for="" class="form-label">Ajouter un vendeur?</label>
+                                   <div class="px-2">
+                                            <input type="radio" name="add_vendor" id="no" value="0" checked class="ck">
+                                            <label for="no">Non</label>&nbsp;&nbsp;&nbsp;
+                                            <input type="radio" name="add_vendor" id="yes" value="1" class="ck">
+                                            <label for="yes">Oui</label>
+                                   </div>
+                                </div>
+                                <div id="block-vendeur" class="col-md-12" style="transition: all 0.6s 0.1s ease-in-out;">
+                                    <header class="section-header"><br>
+                                      <p class="text-center stitre">Ajouter un vendeur au point de vente</p>
+                                    </header>
+                                    <div class="row gy-4">
 
-                                <header class="section-header"><br>
-                                  <p class="text-center stitre">Ajouter un gérant au point de vente</p>
-                                </header>
-
-                                <div class="col-md-6 ">
-                                  {{form_gerant.last_name}}
-                                  {% for error in form.last_name.errors %}
-                                      <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
-                                  {% endfor %}
-                              </div>
-                              <div class="col-md-6 ">
-                                  {{form_gerant.first_name}}
-                                  {% for error in form.first_name.errors %}
-                                      <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
-                                  {% endfor %}
-                              </div>
-                              <div class="col-md-6">
-                                  {{form_gerant.username}}
-                                  {% for error in form.username.errors %}
-                                  <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
-                                  {% endfor %}
-                              </div>
-                              <div class="col-md-6">
-                                  {{profile_form.telephone}}
-                                  {% for error in profile_form.telephone.errors %}
-                                  <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
-                                  {% endfor %}
-                              </div>
-                              <div class="col-md-6 ">
-                                  {{form_gerant.password1}}
-                                  {% for error in form.password1.errors %}
-                                      <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
-                                  {% endfor %}
-                              </div>
-                              <div class="col-md-6 ">
-                                  {{form_gerant.password2}}
-                                  {% for error in form.password2.errors %}
-                                      <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
-                                  {% endfor %}
-                              </div>
+                                        <div class="col-md-6 ">
+                                          {{form_gerant.last_name}}
+                                          {% for error in form.last_name.errors %}
+                                              <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
+                                          {% endfor %}
+                                        </div>
+                                        <div class="col-md-6 ">
+                                          {{form_gerant.first_name}}
+                                          {% for error in form.first_name.errors %}
+                                              <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
+                                          {% endfor %}
+                                      </div>
+                                        <div class="col-md-6">
+                                          {{form_gerant.username}}
+                                          {% for error in form.username.errors %}
+                                          <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
+                                          {% endfor %}
+                                      </div>
+                                        <div class="col-md-6">
+                                          {{profile_form.telephone}}
+                                          {% for error in profile_form.telephone.errors %}
+                                          <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
+                                          {% endfor %}
+                                      </div>
+                                        <div class="col-md-6 ">
+                                          {{form_gerant.password1}}
+                                          {% for error in form.password1.errors %}
+                                              <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
+                                          {% endfor %}
+                                      </div>
+                                        <div class="col-md-6 ">
+                                          {{form_gerant.password2}}
+                                          {% for error in form.password2.errors %}
+                                              <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
+                                          {% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
                               <div class="col-md-12 text-center">
                                 <button type="submit" class="w-100">Ajouter le point</button>
                               </div>
@@ -166,18 +178,50 @@
     </section>
   </div>
 </div>
+<script type="text/javascript" src="{% static 'assets/js/jquery-3.5.1.min.js'%}"></script>
 <script>
-  var form_fields = document.getElementsByTagName('input')
-  form_fields[5].placeholder='Nom';
-  form_fields[6].placeholder='Prénoms';
-  form_fields[7].placeholder='Nom d\'utilisateur';
-  form_fields[8].placeholder='Téléphone';
-  form_fields[9].placeholder = 'Mot de passe';
-  form_fields[10].placeholder = 'Confirmer le mot de passe';
-  for (var field in form_fields){	
-      form_fields[field].className += ' form-control'
-  }
+    $(function (){
+        $("#block-vendeur").hide('slow');
+        var form_fields = document.querySelectorAll('input:not(.ck)')
+        form_fields[5].placeholder='Nom';
+        form_fields[5].required=false;
+        form_fields[6].placeholder='Prénoms';
+        form_fields[6].required=false;
+        form_fields[7].placeholder='Nom d\'utilisateur';
+        form_fields[7].required=false;
+        form_fields[8].placeholder='Téléphone';
+        form_fields[8].required=false;
+        form_fields[9].placeholder = 'Mot de passe';
+        form_fields[9].required=false;
+        form_fields[10].placeholder = 'Confirmer le mot de passe';
+        form_fields[10].required=false;
+        for (var field in form_fields){
+            form_fields[field].className += ' form-control'
+        }
+
+        /*si le user choisi oui ou non*/
+        $('input[name=add_vendor]').change(function (){
+            if ($('input[name=add_vendor]:checked').val() === "1"){
+                $("#block-vendeur").show('slow');
+                form_fields[5].required=true;
+                form_fields[6].required=true;
+                form_fields[7].required=true;
+                form_fields[8].required=true;
+                form_fields[9].required=true;
+                form_fields[10].required=true;
+            }else{
+                 $("#block-vendeur").hide('slow');
+                 form_fields[5].required=false;
+                form_fields[6].required=false;
+                form_fields[7].required=false;
+                form_fields[8].required=false;
+                form_fields[9].required=false;
+                form_fields[10].required=false;
+            }
+        });
+    });
 </script>
+
 
 {% endblock body %}
     
