--- a/templates/dashboard/layouts/index.html
+++ b/templates/dashboard/layouts/index.html
@@ -123,7 +123,25 @@
                   {% endif %}
                 </div>
               </div>
-            </div>    
+            </div>
+
+            <div class="col-lg-3 col-md-6">
+            <div class="count-box">
+              <i class="bi bi-people lico" style="color: #ee6c20"></i>
+              <div>
+                {% if nb_clt %}
+                <span>{{nb_clt}}</span>
+                {% if nb_clt <= 1 %}
+                <p>Client</p>
+                {% else %}
+                <p>Clients</p>
+                {% endif %} {% else %}
+                <span>--</span>
+                <p>Client</p>
+                {% endif %}
+              </div>
+            </div>
+          </div>
           </div>
         </div>
       </section>
