Add sells graph

--- a/templates/dashboard_user/layouts/index.html
+++ b/templates/dashboard_user/layouts/index.html
@@ -104,7 +104,7 @@
                   labels: lbl,
                   datasets: [
                     {
-                      label: "Ventes",
+                      label: "Ventes en FCFA",
                       data: data,
                       backgroundColor: [
                         "rgba(255, 99, 132, 0.2)",
