--- a/templates/ventes/index.html
+++ b/templates/ventes/index.html
@@ -13,7 +13,10 @@
             <div class="container-fluid">
                 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                     <li class="nav-item">
-                      <a class="nav-link active" id="pills-day-tab" data-toggle="pill" href="#pills-day" role="tab" aria-controls="pills-day" aria-selected="true">Ajourd'hui</a>
+                        <a class="nav-link active" id="pills-graph-tab" data-toggle="pill" href="#pills-graph" role="tab" aria-controls="pills-graph" aria-selected="true"><bi class="bi bi-bar-chart-line"></bi></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" id="pills-day-tab" data-toggle="pill" href="#pills-day" role="tab" aria-controls="pills-day" aria-selected="false">Ajourd'hui</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" id="pills-mois-tab" data-toggle="pill" href="#pills-mois" role="tab" aria-controls="pills-mois" aria-selected="false">Mois</a>
@@ -26,7 +29,70 @@
                     </li>
                 </ul>
                 <div class="tab-content" id="pills-tabContent">
-                    <div class="tab-pane fade show active mb-4" id="pills-day" role="tabpanel" aria-labelledby="pills-day-tab">
+                    <div class="tab-pane fade show active mb-4" id="pills-graph" role="tabpanel" aria-labelledby="pills-graph-tab">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <section class="component pb-4">
+                                        <canvas id="myChart" width="100%" height="100%"></canvas>
+                                        <script src="{% static 'assets/js/chart.min.js' %}"></script>
+                                        <script>
+                                          var lbl = {{lbl_vte|safe}};
+                                          var data = {{data_vte|safe}};
+                                          var ctx = document.getElementById("myChart").getContext("2d");
+                                          var myChart = new Chart(ctx, {
+                                            type: "line",
+                                            data: {
+                                              labels: lbl,
+                                              datasets: [
+                                                {
+                                                  label: "Ventes en FCFA",
+                                                  data: data,
+                                                  backgroundColor: [
+                                                    "rgba(255, 99, 132, 0.2)",
+                                                    "rgba(54, 162, 235, 0.2)",
+                                                    "rgba(255, 206, 86, 0.2)",
+                                                    "rgba(75, 192, 192, 0.2)",
+                                                    "rgba(153, 102, 255, 0.2)",
+                                                    "rgba(255, 159, 64, 0.2)",
+                                                  ],
+                                                  borderColor: [
+                                                    "rgba(255, 99, 132, 1)",
+                                                    "rgba(54, 162, 235, 1)",
+                                                    "rgba(255, 206, 86, 1)",
+                                                    "rgba(75, 192, 192, 1)",
+                                                    "rgba(153, 102, 255, 1)",
+                                                    "rgba(255, 159, 64, 1)",
+                                                  ],
+                                                  borderWidth: 1,
+                                                },
+                                              ],
+                                            },
+                                            options: {
+                                              responsive: true,
+                                              plugins: {
+                                                legend: {
+                                                  position: 'bottom',
+                                                },
+                                                title: {
+                                                  display: true,
+                                                    text: 'Evolution des ventes',
+                                                }
+                                              },
+                                              scales: {
+                                                y: {
+                                                  beginAtZero: true,
+                                                },
+                                              },
+                                            },
+                                          });
+                                     </script>
+                                    </section>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade mb-4" id="pills-day" role="tabpanel" aria-labelledby="pills-day-tab">
                         <div class="container-fluid">
                             {% if lst_vte_j %}
                             <table class="table table-responsive table-striped">
