--- a/templates/dashboard_user/produits/index.html
+++ b/templates/dashboard_user/produits/index.html
@@ -18,8 +18,9 @@
             <div class="col-lg-6 col-md-6">
               <div class="btn-toolbar mb-2 mb-md-0">
                 <div class="btn-group me-2">
-                  <a href="{% url 'export_pdf_prod_gerant' %}" class="btn btn-sm btn-outline-danger">PDF</a>
-                  <a href="{% url 'export_xls_prod_gerant' %}" class="btn btn-sm btn-outline-success">XLS</a>
+                  {% if lst_prod %}
+                    <a href="{% url 'export_pdf_prod_gerant' %}" class="btn btn-sm btn-outline-danger">PDF</a>
+                  {% endif %}
                 </div>
               </div>
             </div>
@@ -98,8 +99,9 @@
                     <div class="col-lg-6 col-md-6">
                       <div class="btn-toolbar mb-2 mb-md-0">
                         <div class="btn-group me-2">
+                          {% if lst_histo_prod %}
                           <a href="{% url 'export_pdf_histo' %}" class="btn btn-sm btn-outline-danger">PDF</a>
-                          <a href="{% url 'export_xls_histo' %}" class="btn btn-sm btn-outline-success">XLS</a>
+                          {% endif %}
                         </div>
                       </div>
                     </div>
