--- a/templates/dashboard_user/services/index.html
+++ b/templates/dashboard_user/services/index.html
@@ -17,8 +17,9 @@
           <div class="row">
             <div class="col-lg-6 col-md-6">
               <div class="btn-group me-2">
+                {% if lst_serv %}
                 <a href="{% url 'export_pdf_serv_gerant' %}" class="btn btn-sm btn-outline-danger">PDF</a>
-                <a href="{% url 'export_xls_serv_gerant' %}" class="btn btn-sm btn-outline-success">XLS</a>
+                {% endif %}
               </div>
             </div>
             <div class="col-lg-6 col-md-6">
