--- a/templates/dashboard_user/ventes/new.html
+++ b/templates/dashboard_user/ventes/new.html
@@ -125,12 +125,22 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="">
                             <form action="" method="" class="php-email-form" style="padding-top: 12%" id="formClient">
-                                <h3 class="text-muted">Clients</h3>
+                                <h3 class="text-muted">Client</h3>
                                 <div class="row">
                                     <div class="col-lg-12 mt-3">
                                         {{form.client}} {% for error in form.client.errors %}
                                         <span class="text-danger" style=" font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span> {% endfor %}
                                     </div>
+                                </div>
+                                <br>
+                                <div class="col-lg-12">
+                                    <label for="" class="form-label">Nouveau client?</label>
+                                   <div class="px-2">
+                                       <input type="radio" name="add_vendor" id="no" value="0" checked class="ck">
+                                       <label for="no">Non</label>&nbsp;&nbsp;&nbsp;
+                                       <input type="radio" name="add_vendor" id="yes" value="1" class="ck">
+                                       <label for="yes">Oui</label>
+                                   </div>
                                 </div>
                                 <div class="mt-5">
                                     <button type="button" class="btn btn-primary w-100" id="btn-valider" name="btn-valider" style="height: 50px;">Valider</button>
@@ -144,6 +154,18 @@
     </div>
 </div>
 <script type="text/javascript" src="{% static 'assets/js/jquery-3.5.1.min.js'%}"></script>
+<script>
+    $(function () {
+        /*si le user choisi oui ou non*/
+        $('input[name=add_vendor]').change(function (){
+            if ($('input[name=add_vendor]:checked').val() === "1"){
+                $('select[name=client]').prop('required',true);
+            }else{
+                 $('select[name=client]').prop('required',false);
+            }
+        });
+    });
+</script>
 <script>
     var _prix;
     var _qte;
