--- a/templates/clients/index.html
+++ b/templates/clients/index.html
@@ -46,6 +46,9 @@
             <li class="nav-item">
               <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Classement</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" id="pills-other-tab" data-toggle="pill" href="#pills-other" role="tab" aria-controls="pills-other" aria-selected="false">Autres Clients</a>
+            </li>
           </ul>
           <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
@@ -199,6 +202,40 @@
                     </div>
                   </section>
                 </div>
+              </div>
+            </div>
+            <div class="tab-pane fade" id="pills-other" role="tabpanel" aria-labelledby="pills-other-tab">
+              <div class="container-fluid">
+                <header class="section-header">
+                  <p class="stitre text-uppercase" style="font-size: 25px;">Liste des autres clients</p>
+                </header>
+                {% if lst_clt_o %}
+                  <div class="row row-cols-1 row-cols-md-3 g-4">
+                    {% for clt in lst_clt_o %}
+                      <div class="col-lg-3 col-6">
+                        <div class="card">
+                          {% if clt.image %}
+                            <img src="{{clt.image.url}}" alt="{{clt.nom}}" class="img-fluid" height="30" width="30">
+                          {% else %}
+                            <img src="{% static 'assets/img/default_clt.png' %}" alt="{{clt.nom}}" class="img-fluid card-img-top">
+                          {% endif %}
+                          <div class="card-body">
+                            <h6 class="prod-cat text-muted">{{clt.adr_phisique}}</h6>
+                            <h5 class="card-title">{{clt.nom}} {{clt.prenoms}}</h5>
+                            <p class="prod-infos">{{clt.telephone_p}}</p>
+                            <div class="" align="center">
+                              <a href="{% url 'detail_client_user' clt.id %}" class=""><i class="bi bi-info-circle info"></i></a>&nbsp;
+                              <!--<a href="{% url 'update_client' clt.id %}" class=""><i class="bi bi-pencil-square edit"></i></a>&nbsp;-->
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    {% endfor %}
+                    </div>
+                {% else %}
+                  <br>
+                  <p class="alert alert-info text-center">Aucun client disponible pour le moment.</p>
+                {% endif %}
               </div>
             </div>
           </div>
