--- a/templates/dashboard_user/ventes/new.html
+++ b/templates/dashboard_user/ventes/new.html
@@ -142,6 +142,34 @@
                                        <label for="yes">Oui</label>
                                    </div>
                                 </div>
+                                <div id="block-client" class="col-lg-12" style="transition: all 0.6s 0.1s ease-in-out; display: none">
+                                    <header class="section-header"><br>
+                                      <p class="stitre">Nouveau client</p>
+                                    </header>
+                                    <form action="" method="post" class="php-email-form" style="padding-top: 12%;" enctype="multipart/form-data">
+                                        {% csrf_token %}
+                                        <div class="row gy-4">
+                                            <div class="col-md-6">
+                                              {{form_clt.nom}}
+                                              {% for error in form.nom.errors %}
+                                                <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
+                                              {% endfor %}
+                                            </div>
+                                            <div class="col-md-6">
+                                              {{form_clt.prenoms}}
+                                              {% for error in form.prenoms.errors %}
+                                                <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
+                                              {% endfor %}
+                                            </div>
+                                            <div class="col-md-6">
+                                              {{form_clt.telephone_p}}
+                                              {% for error in form.telephone_p.errors %}
+                                                <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
+                                              {% endfor %}
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
                                 <div class="mt-5">
                                     <button type="button" class="btn btn-primary w-100" id="btn-valider" name="btn-valider" style="height: 50px;">Valider</button>
                                 </div>
@@ -159,9 +187,11 @@
         /*si le user choisi oui ou non*/
         $('input[name=add_vendor]').change(function (){
             if ($('input[name=add_vendor]:checked').val() === "1"){
+                $("#block-client").show();
                 $('select[name=client]').prop('required',true); // obligatoire
                 $('select[name=client]').prop('disabled',true); // desactivation du select
             }else{
+                $("#block-client").hide();
                  $('select[name=client]').prop('required',false);
                  $('select[name=client]').prop('disabled',false); //activation du select
 
